# lar_visionsystem

./: CMakeLists.txt  README.md  package.xml
cfg/: comau_manual_camera_align.cfg  marker_detector.cfg
cmake/Modules/: FindOpenNI.cmake  Findlibfreenect.cmake
data/: kinect.yml  kinect2.yml  lifeCamera.yml  lifeCamera640x480.yml  lifeCamera640x480.yml_back  primesense_config.xml
data/calibrations/: head_camera.yaml  kinect_parameters.txt  lifeCamera.yml~  lifeCamera640x480.yml~  lifeCamera_Test.yml  lifeCamera_Test.yml~  primesense_depth.yaml  primesense_rgb.yaml
data/track_2d/: default_track.yml
data/vrep_demos/: cicle_conveyor.ttt
include/: MathUtils.h
include/utils/: SimpleBluetoothNode.h
launch/: conveyor_vrep_test.launch  live_tsdf.launch  usb-test.launch
msg/: MarkerApproachCommand.msg
src/: camera_viewer.cpp  comau_live_tsdf.cpp  comau_manual_camera_align.cpp  comau_manual_laser.cpp  comau_manual_photographer.cpp  comau_tf_follower.cpp  conveyor_vrep_test.cpp  marker_detector.cpp  marker_detector_target.cpp  marker_detector_udp.cpp  playground.cpp  tester.cpp  track_2d.cpp  vision_test.cpp
src/utils/: MathUtils.cpp  SimpleBluetoothNode.cpp
